# sentiric-contracts

./: .context.md  .gitignore  CONTRIBUTING.md  Cargo.toml  LOGIC.md  Makefile  README.md  TASKS.md  buf.gen.yaml  buf.work.yaml  buf.yaml  build.rs  go.mod  go.sum  package.json  setup.py
.github/: Protobuf-Standards.md
.github/workflows/: ci.yml  release.yml
docs/: protobuf-standards.md  release-process.md
proto/: buf.gen.yaml  buf.yaml
proto/sentiric/agent/v1/: orchestration.proto
proto/sentiric/audio_gen/v1/: gateway.proto
proto/sentiric/billing/v1/: billing.proto
proto/sentiric/cdr/v1/: cdr.proto
proto/sentiric/control/v1/: license.proto  observability.proto  task.proto
proto/sentiric/data/v1/: asset.proto  config.proto  context.proto  schema.proto
proto/sentiric/dialog/v1/: dialog.proto
proto/sentiric/dialplan/v1/: dialplan.proto
proto/sentiric/event/v1/: event.proto
proto/sentiric/image/v1/: gateway.proto
proto/sentiric/knowledge/v1/: indexing.proto  knowledge.proto  query.proto
proto/sentiric/llm/v1/: gateway.proto  llama.proto  local.proto
proto/sentiric/media/v1/: media.proto
proto/sentiric/mobile/v1/: gateway.proto
proto/sentiric/sip/v1/: b2bua.proto  gateway.proto  proxy.proto  registrar.proto  sbc.proto  signaling.proto
proto/sentiric/stream/v1/: gateway.proto
proto/sentiric/stt/v1/: gateway.proto  whisper.proto
proto/sentiric/telephony/v1/: action.proto
proto/sentiric/tts/v1/: coqui.proto  edge.proto  gateway.proto  mms.proto  omnivoice.proto  tts.proto
proto/sentiric/user/v1/: identity.proto  user.proto
proto/sentiric/vertical/v1/: ecommerce.proto  finance.proto  health.proto  hospitality.proto  legal.proto  public.proto
proto/sentiric/video/v1/: gateway.proto
src/: lib.rs
validation/cpp/: CMakeLists.txt  main.cpp
