[package]
name = "sentiric-contracts"
# Temiz bir başlangıç için yeni bir major versiyon. Bu son değişiklik.
version = "1.0.0"
edition = "2021"
description = "Provides pre-compiled Rust gRPC stubs for the Sentiric platform."
license = "Apache-2.0"
repository = "https://github.com/sentiric/sentiric-contracts"

[dependencies]
tonic = "0.11"
prost = "0.12"
# ÖNEMLİ: prost-types'ın "serde" özelliği aktive edilmiş HALDE KALIYOR.
prost-types = { version = "0.12", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
# prost-wkt-types'a ihtiyacımız yok.

[build-dependencies]
tonic-build = "0.11"
# prost-wkt-build'e ihtiyacımız yok.