[package]
name = "sentiric-contracts"
version = "1.7.8"
edition = "2021"
description = "Provides pre-compiled Rust gRPC stubs for the Sentiric platform."
license = "Apache-2.0"
repository = "https://github.com/sentiric/sentiric-contracts"

build = "build.rs"

[lib]
path = "src/lib.rs"

[dependencies]
tonic = "0.11"
prost = "0.12"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
tonic-build = { version = "0.11", features = ["prost"] }